--- a/views/l-gy-hzhb.ejs
+++ b/views/l-gy-hzhb.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+x<!DOCTYPE html>
 <html>
 
 <head>
@@ -17,11 +17,11 @@
           <!-- 菜单栏 -->
           <div class="gy-leftbox">
             <ul>
-              <li><a href="/l">公司简介</a></li>
+              <li><a href="/l/gsjj">公司简介</a></li>
               <li><a href="/l/gltd">管理团队</a></li>
               <li><a href="/l/dstd">董事团队</a></li>
               <li><a href="/l/fzlc">发展历程</a></li>
-              <li><a href="/l/hzhb">合作伙伴</a></li>
+              <li style="border-left: 3px #dd2c37 solid;background:#fff"><a href="/l/hzhb">合作伙伴</a></li>
               <li><a href="/l/yqlj">友情链接</a></li>
               <li><a href="/l/lxwm">联系我们</a></li>
             </ul>
@@ -31,6 +31,277 @@
 
             <!-- 合作伙伴 -->
             <div class="gy-hzhb">
+              <p class="gy-hztext">合作伙伴<br> Cooperative Partners</p>
+              <p class="gy-title gy-tabs">
+                <span class="gy-active">合作伙伴</span>
+                <span> <span  class="gy-titlel">信贷服务商</span></span>
+                <span>财富合作机构</span>
+              </p>
+              <div class="gy-show">
+                <div class="gy-active">
+                  <!-- 合作伙伴 -->
+                  <div>
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/85141448511657005.jpg" alt=""></p>
+                      <p class="gy-text-2">银联在线支付</p>
+                      <p class="gy-text-3">中国银联全称中国银联股份有限公司（英文名称：China UnionPay Co.,Ltd.）,2002年3月26日成立， 总部设在上海。是经中国人民银行批准的，由八十多家国内金融机构共同发起设立的股份制金融机构。</p>
+                    </ul>
+
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257444.jpg" alt=""></p>
+                      <p class="gy-text-2">中国人寿电子商务有限公司</p>
+                      <p class="gy-text-3">中国人寿电子商务有限公司注册资金10亿元，为中国人寿保险（集团）公司全资成立的一级子公司。经报请财政部、保监会、国务院批准，于2013年11月28日向北京市工商行政管理局申请公司设立登记并获批准。</p>
+                    </ul>
+
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257490.png" alt=""></p>
+                      <p class="gy-text-2">中国建设银行</p>
+                      <p class="gy-text-3">中国建设银行（简称建设银行或建行，最初名为中国人民建设银行）成立于1954年10月1日， 是股份制商业银行。是国有五大商业银行之一。中国建设银行主要经营领域包括公司银行业务 、个人银行业务和资金业务，中国内地设有分支机构14，121家。</p>
+                    </ul>
+
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257518.png" alt=""></p>
+                      <p class="gy-text-2">中国工商银行</p>
+                      <p class="gy-text-3">中国工商银行（全称：中国工商银行股份有限公司）成立于1984年， 是中国五大银行之首，世界五百强企业之一，拥有中国最大的客户群中国最大的商业银行。中国工商银行是中国最大的国有独资商业银行，基本任务。</p>
+                    </ul>
+
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257562.png" alt=""></p>
+                      <p class="gy-text-2">中国浦发银行</p>
+                      <p class="gy-text-3">上海浦东发展银行股份有限公司（以下简称：浦发银行）是1992年8月28日经中 国人民银行批准设立、1993年1月9日开业、1999年在上海证券交易所挂牌上市（股票交易代码：600000）的股份制商业银行，总行设在上海。</p>
+                    </ul>
+
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257590.png" alt=""></p>
+                      <p class="gy-text-2">北京银行</p>
+                      <p class="gy-text-3">北京银行，即原来的“北京市商业银行”，成立于1996年，是一家新型的股份制商业银行。 在中国的北京、上海、天津、杭州、深圳、西安、长沙、南京、济南、南昌拥有136家营业网点。 北京银行目前是中国最大的城市商业银行及北京地区第三大银行，雇有3600多名员工， 通过其116家支行为个人与公司客户提供服务。</p>
+                    </ul>
+
+
+
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257623.png" alt=""></p>
+                      <p class="gy-text-2">招商银行</p>
+                      <p class="gy-text-3">招商银行成立于1987年4月8日，是中国第一家完全由企业法人持股的股份制商业银行，总行设在深圳。 由香港招商局集团有限公司创办，并以18.03%的持股比例任最大股东。</p>
+                    </ul>
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257654.png" alt=""></p>
+                      <p class="gy-text-2">华夏银行</p>
+                      <p class="gy-text-3">华夏银行成立于1992年10月，是一家全国性股份制商业银行，总行设在北京。 1995年经中国人民银行批准开始进行股份制改造，改制变更为华夏银行股份有限公司</p>
+                    </ul>
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257682.png" alt=""></p>
+                      <p class="gy-text-2">民生银行</p>
+                      <p class="gy-text-3">中国民生银行于1996年1月12日在北京正式成立，是中国首家主要由非公有制企业入股的全国性股份制商业银行，同时又是严格按照《公司法》和《商业银行法》建立的规范的股份制金融企业。</p>
+                    </ul>
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257706.png" alt=""></p>
+                      <p class="gy-text-2">鼎鸿信资产管理有限公司</p>
+                      <p class="gy-text-3">深圳市鼎鸿信资产管理有限公司成立于2009年11月，注册资本3000万元，专门从事受托资产管理、投资管理、企业管理咨询、经济信息咨询等业务。持有由中国证券投资基金业协会颁发的《私募投资基金管理人登记证书》，为开展私募证券投资、股权投资、创业投资等私募基金业务的金融机构。</p>
+                    </ul>
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257722.jpg" alt=""></p>
+                      <p class="gy-text-2">北邮在线</p>
+                      <p class="gy-text-3">成立于2000年，是北京邮电大学下属的、面向全社会的职业教育品牌。北邮在线致力于中国互联网金融普惠教育，在工信部与教育部支持下，未来3年将与合作企业联合，免费为全国高校培养5000-10000名互联网金融实战师资。</p>
+                    </ul>
+                    <ul class="gy-text-1">
+                      <p><img class="gy-img-1" src="/images/1443431257773.png" alt=""></p>
+                      <p class="gy-text-2">网贷之家</p>
+                      <p class="gy-text-3">网贷之家是中国首家权威P2P网贷行业门户网站，始终站在客观、中立、公开的角度为P2P网络借贷行业的参与者与关注者提供全面、深入、专业的行业资讯，并倾心打造理性、包容、思辨、开放的行业交流社区，致力于推动中国网络借贷行业健康持续发展</p>
+                    </ul>
+
+                  </div>
+                </div>
+
+
+
+                <div>
+                  <!-- 信贷服务商 -->
+                  <div>
+                    <ul>
+                      <li class="gy-text-4">
+                        <p class="gy-h4">金达融资担保有限责任公司</p>
+                        <p class="gy-h5">金达融资担保有限责任公司,注册资金为5.5亿元,是专业信用担保公司。第一批取得了北京市金融工作局颁发的“融资性担保机构经营许可证”。</p>
+                      </li>
+
+                      <li class="gy-text-4">
+                        <p class="gy-h4">新沂市金邦农村小额贷款有限公司</p>
+                        <p class="gy-h5">公司成立于2011年5月25日，位于江苏省新沂市时集镇，注册资本14000万，为徐州A级资质小贷公司。目前面向“三农”提供小额贷款、融资担保、开展金融机构代理及经过监管审批的其他业务。</p>
+                      </li>
+
+                      <li class="gy-text-4">
+                        <p class="gy-h4">北京坤隆嘉益投资管理有限公司</p>
+                        <p class="gy-h5">北京坤隆嘉益投资管理有限公司，原国晟燊达投资（北京）有限公司是一家传统与互联网金融相结合的企业，位于北京朝阳区八里庄西里100号住邦大厦。公司成立于2008年12月，注册资金5000万，2014年年度实现债权1亿2000万，总放款额达3亿1000万，2015年上半年，实现债权9000万，放款额达2亿5000万。主要业务范围为房屋抵质押贷款、二手房按揭贷款、银行信用贷款等。公司成立以来，凭借自有资金实力、优秀的员工团队，灵活的运营模式，完善的管理制度，逐步发展壮大，为广大客户提供优质满意的服务。</p>
+                      </li>
+
+                      <li class="gy-text-4">
+                        <p class="gy-h4">廊坊市天诚担保有限公司</p>
+                        <p class="gy-h5">廊坊市天诚担保有限公司成立于2011年9月，公司实力雄厚，注册资金为10520万元，公司为融资性担保企业，目前在建行、农村信用社、廊坊银行、邮储银行入围并开展业务，并受廊坊市政府委托管理助农专项基金，完成助农贷款发放的工作。</p>
+                      </li>
+
+                      <li class="gy-text-4">
+                        <p class="gy-h4">郑州市郑东新区世润小额贷款有限公司</p>
+                        <p class="gy-h5">郑州市郑东新区世润小额贷款有限公司是经河南省工信厅批准成立的专业金融服务机构，注册资本10000万元，地址位于郑州市郑东新区祥盛街10号7号楼1-2层附47、48号，共有员工45人。公司经营范围包括：办理各项小额贷款，包括农户小额贷款、个体工商户贷款、企业贷款、个人汽车贷款、有价证券质押贷款、房屋抵押贷款、个人消费贷款、创业贷款等；办理中小企业发展、管理、财务咨询等业务。</p>
+                      </li>
+                      <li class="gy-text-4">
+                        <p class="gy-h4">北京昌融缘投资管理有限公司</p>
+                        <p class="gy-h5">我公司成立于2015年3月，主营投资管理，目前拥有职工40余人，团队年轻、朝气，业务娴熟，管理严谨，业务流程透明，高效。团队经理为业界精英，多年从业经验。视野开阔，善于应对各种突发状况。自开业至今公司业务开展迅速，在很短时间业绩突出。作为朝阳产业，公司专注一种产品，赢得客户信任。发展前景远大。</p>
+                      </li>
+                      <li class="gy-text-4">
+                        <p class="gy-h4">朔天通淼融资担保有限公司</p>
+                        <p class="gy-h5">公司是一家以融资担保为主要业务，集担保、投资、咨询于一体和其他金融服务为手段，旨在提升企业信用，加速市场交易，改善资源配置，推动信用担保行业发展，促进信用文化和社会信用体系建设，促进银企合作，以缓解中小企业“融资难”等矛盾，提高企业的市场竞争能力，为国民经济和社会发展服务。</p>
+                      </li>
+                      <li class="gy-text-4">
+                        <p class="gy-h4">诺泽投资管理（北京）有限公司</p>
+                        <p class="gy-h5">诺泽投资管理(北京)有限公司是一家专业的集财富管理、风险评估与管理、贷款行业投资、贷款咨询服务与交易促成等业务于一体，为客户提供综合性资金解决方案的专业化金融服务企业。公司致力于激活民间资本、帮助小微企业和个人通过快捷的金融方案解决资金周转问题。公司倡导普惠金融、公益社会的服务理念，秉承“千金一诺，深仁厚泽”的企业文化，依托公司管理团队拥有的丰富资源和专业的投资优势，开拓广泛的投资渠道，构建社会资本与产业结合的直接高效的P2P投资平台，力争打造中国最专业的微金融服务品牌。</p>
+                      </li>
+                      <li class="gy-text-4">
+                        <p class="gy-h4">湖北虹通投资担保有限公司</p>
+                        <p class="gy-h5">湖北虹通投资担保有限公司成立于2006年3月。目前公司注册资本一亿伍仟万元整，公司住所：湖北省襄阳市襄城区盛丰路2号。经营地面积740.29平方米，租赁期至2016年7月1日。法定代表人熊华庆。公司主要设有贷款担保审查委员会、风险控制部、法律顾问部、企业贷款担保部、个人贷款担保部、财务综合部等各职能部门。拥有高素质的员工队伍51人，近几年来业务发展迅速、风险控制有效。</p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+
+
+
+
+                <div>
+                  <!-- 财富合作机构 -->
+                  <div>
+                    <ul>
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line1.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">上海纳金投资管理有限公司</p>
+                        <p class="gy-text-3">
+                          上海纳金投资管理有限公司成立于2011年8月1日，纳金以国际金融中心上海为基点，辐射全国，专业从事贵金属经纪业务及贵金属投资理财咨询服务。纳金自成立伊始一直关注于金融产品的投资服务领域，秉承让投资者真正获得利益的服务宗旨，为广大投资者提供全面、优质的趋势性金融产品，同时为旗下的合作伙伴提供业内最专业、先进、完善、和高效的运营模式和培训服务。<br> 网址：www.najin.net <br> 常住地址：上海市闸北区虬江路1000号聚源大厦22楼
+                          <br> <span><img class="gy-img-3"src="/images/line11.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line12.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line2.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">上海量含投资咨询有限公司</p>
+                        <p class="gy-text-3">
+                          上海量含投资咨询有限公司，成立于2013年4月，是一家专业从事各级市场投资咨询、金融产品创新、及各类财富管理等业务的咨询机构。公司注册资金壹拾万元，总部位于上海，下辖苏州、扬州等地的多个分公司，员工数量逾百人，以专业化的服务立足于长三角地区，并逐步扩大辐射到全国。历经一年多的发展，公司已初步形成投资咨询与资产管理等核心业务单元，以提供专业的综合解决方案为优势，全方位成就客户价值。
+                          <br>网址：暂无
+                          <br>常住地址：上海市浦东新区浦东南路528号证券大厦南塔2006室
+                          <br> <span><img class="gy-img-3"src="/images/line21.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line22.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line3.jpg" style="width:135px;" alt="">
+                        </p>
+                        <p class="gy-text-2">广州天基信息技术有限公司</p>
+                        <p class="gy-text-3">
+                          广州天基信息技术有限公司是一家以移动互联网为主的创新型服务企业，是中国银联（移动支付）战略合作伙伴。公司依托强大的技术力量和庞大的市场资源以及卓越的运营团队，致力于移动电商服务中心（母婴私店APP）的开发与应用创新。公司始终关注中国母婴行业发展，凭借其在行业领域积累的丰富经验和广泛能力，结合中国银联世界级的移动支付通道，打造母婴行业电商去平台化O2M全新创富模式。
+                          <br>网址：暂无
+                          <br>常住地址：广东省广州市白云区嘉禾鹤边路冶金工业研究所内聚和创意园2栋5层
+                          <br> <span><img class="gy-img-3"src="/images/line31.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line4.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">济南金赞信息技术有限公司</p>
+                        <p class="gy-text-3">
+                          济南金赞信息技术有限公司成立于2013年11月份，从成立至今一直致力于信息技术开发与信息平台建设。公司始终本着“以市场和客户需求为导向”的宗旨，着眼于市场需求，高瞻远瞩，凭借辛勤耕耘和诚实守信的经营，以及广大商家和客户的支持，赢得了业界和客户的一致好评和信任。
+                          <br>网址：暂无
+                          <br>常住地址：济南市市中区经七路四号果品公司4楼409室
+                          <br> <span><img class="gy-img-3"src="/images/line41.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line42.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line5.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">深圳前海巨鲸资产管理有限公司</p>
+                        <p class="gy-text-3">
+                          深圳前海巨鲸资产管理有限公司成立于2014 年，注册资金1000万元,现有职员15人，隶属香港新科技电子集团有限公司。至力于互联网金融业务运营，成立之初便携手中微（北京）信用管理有限公司，7月15日与其互联网金融平台微金所签约成为其合作伙伴。同时为中小企业提供资产管理服务、投资信息咨询、企业投融资、项目对接服务等综合金融服务。
+                          <br>网址：暂无
+                          <br>常住地址：深圳市福田区裕享路海悦华城A座3502
+                          <br> <span><img class="gy-img-3"src="/images/line51.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line52.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line6.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">深圳市鼎鸿信资产管理有限公司</p>
+                        <p class="gy-text-3">
+                          深圳市鼎鸿信资产管理有限公司是经深圳市市场监督管理局批准成立的有限责任公司，成立于2009年11月，注册资本3000万元。公司专门从事受托资产管理、投资管理、企业管理咨询、经济信息咨询等业务。随着公司业务的不断扩张，合作伙伴已涵盖前海股权交易中心、工商银行深圳分行、兴业银行深圳分行、建设银行深圳分行、华润信托、中小企业、房地产开发商及个人、机构投资者，积累了一定数量的客户及丰富的基金募集和投资管
+                          <br>网址：www.maxitrust.com
+                          <br>常住地址：深圳市南山区沙河西路鼎新大厦西座三楼
+                          <br> <span><img class="gy-img-3"src="/images/line61.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line62.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line7.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">百草理财</p>
+                        <p class="gy-text-3">
+                          百草理财是创新型互联网精品理财平台。通过精选优质金融产品、严格风险控制、优化资产配置，为互联网投资人提供低门槛，高收益，品类丰富、灵活变现、安全稳健的互联网理财产品，并根据投资人自身需求和风险偏好等提供定制理财服务。
+                          <br>网址：www.baicaolicai.com
+                          <br>常住地址：深圳市龙岗区雅园路5号文化创意园Y2栋7楼
+                          <br> <span><img class="gy-img-3"src="/images/line71.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line72.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line8.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">陕西思方达投资管理有限公司</p>
+                        <p class="gy-text-3">
+                          陕西思方达投资管理有限公司成立于2014年5月，注册资金300万。公司目前有区域经理16人，客户经理120人，投资人近600人，月平均投资额超过500万元。致力于为大众投资者选择更安全、收益更合理、投资更加便捷的投资理财产品。
+                          <br>网址：暂无
+                          <br>常住地址：陕西省碑林区南二环西段159号二号楼4单元42409室
+                          <br> <span><img class="gy-img-3"src="/images/line81.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line82.jpg" alt=""></span>
+                        </p>
+                      </li>
+
+                      <li class="gy-text-5">
+                        <p class="gy-img-2">
+                          <img src="/images/line9.jpg" alt="">
+                        </p>
+                        <p class="gy-text-2">黑龙江传承财富投资管理有限公司</p>
+                        <p class="gy-text-3">
+                          黑龙江传承财富投资管理公司是独立从事资产管理、股权投资管理、实业投资、创业投资、投资管理与咨询、企业管理与咨询、商务信息咨询、制做代理、发布广告的股份制企业。注册资金1000万元，现有人数36人。公司设有投资银行部、私人银行部、风险管理部、财务部、综合部等部门，并与律师事务所、会计师事务所等签约，由专业律师、金融理财师、风险控制的专门人才组成管理团队。
+                          <br>网址：http://www.cccfgl.com
+                          <br>常住地址：黑龙江省哈尔滨市道里区友谊路111号22层
+                          <br> <span><img class="gy-img-3"src="/images/line91.jpg" alt=""></span>
+                          <span><img class="gy-img-3"src="/images/line92.jpg" alt=""></span>
+                        </p>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+
+
+
+
+
+
+              </div>
 
             </div>
 
@@ -45,24 +316,29 @@
 
 
     <%-include("lz_foot")%>
-      <script src="/js/jquery.min.js" charset="utf-8"></script>
-      <script type="text/javascript">
-        var tabs = document.getElementsByClassName('gy-tabs')[0].children;
-        var contents = document.getElementsByClassName("gy-show")[0].children;
 
-        for (var i = 0; i < tabs.length; i++) {
+          <script src="/js/jquery.min.js" charset="utf-8"></script>
+    <script type="text/javascript">
+      var tabs = document.getElementsByClassName('gy-tabs')[0].children;
+      var contents = document.getElementsByClassName("gy-show")[0].children;
 
-          tabs[i].index = i;
-          tabs[i].onclick = function(event) {
-            for (var j = 0; j < tabs.length; j++) {
-              tabs[j].className = "";
-              contents[j].className = "";
-            }
-            this.className = "gy-active";
-            contents[this.index].className = "gy-active";
-          };
-        }
-      </script>
+      for (var i = 0; i < tabs.length; i++) {
+
+        tabs[i].index = i;
+        tabs[i].onclick = function(event) {
+          for (var j = 0; j < tabs.length; j++) {
+            tabs[j].className = "";
+            contents[j].className = "";
+          }
+          this.className = "gy-active";
+          contents[this.index].className = "gy-active";
+        };
+      }
+      var ul = $('ul li');
+      ul.click(function() {
+        location.href = $(this).find('a')[0].href;
+      });
+    </script>
 
 </body>
 
