--- a/public/gy-stylesheets/style.css
+++ b/public/gy-stylesheets/style.css
@@ -186,6 +186,7 @@ nav .gy-container .gy-rightmenu ul li.gy-tou a:active {
   background: #f8f8f8;
   border-top: none;
   font-size: 14px;
+    box-sizing: border-box;
 }
 
 .gy-menubox .gy-leftbox ul li:hover {
@@ -195,13 +196,12 @@ nav .gy-container .gy-rightmenu ul li.gy-tou a:active {
   border-right: none;
   display: block;
   position: relative;
-  left: -3px;
   color: #428bca;
 }
 
 .gy-menubox .gy-leftbox {
   float: left;
-  width: 20%;
+  width: 235px;;
 }
 
 .gy-menubox {
@@ -218,7 +218,7 @@ nav .gy-container .gy-rightmenu ul li.gy-tou a:active {
 
 .gy-wjsbox {
   float: right;
-  width: 958px;
+  width: 965px;
   background: #fff;
   overflow: hidden;
 }
@@ -451,6 +451,7 @@ dt, dd {
   font-size: 14px;
 }
 
+
 .gy-gltd ul.gy-glcon {
   height: 250px;
 }
@@ -524,90 +525,225 @@ dt, dd {
 .gy-s1 {
   background: url("/images/firendship1.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s2 {
   background: url("/images/firendship2.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s3 {
   background: url("/images/firendship3.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s4 {
   background: url("/images/firendship4.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s5 {
   background: url("/images/firendship5.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s6 {
   background: url("/images/firendship6.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s7 {
   background: url("/images/firendship7.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s8 {
   background: url("/images/firendship8.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s9 {
   background: url("/images/firendship9.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
+
 .gy-s10 {
   background: url("/images/firendship10.jpg") no-repeat center center;
   display: inline-block;
-    width: 150px;
-    height: 50px;
-    border: 1px #e3e3e3 solid;
-    margin: 0 10px 25px;
+  width: 150px;
+  height: 50px;
+  border: 1px #e3e3e3 solid;
+  margin: 0 10px 25px;
 }
 
 .gy-link {
-      margin-top: 15px;
+  margin-top: 15px;
 }
+
 .gy-link-p {
   float: left;
-    margin: 0 43px;
-    line-height: 30px;
-    color: #666;
+  margin: 0 43px;
+  line-height: 30px;
+  color: #666;
+}
+
+.gy-hzhb {
+  background: #fff;
+  display: table;
+  padding: 25px;
+  font-size: 14px;
+}
+
+.gy-hztext {
+  text-align: center;
+  color: #4fc3f4;
+  font-size: 24px;
+}
+
+.gy-title {
+  text-align: center;
+}
+
+.gy-hzhb .gy-title span {
+  width: 120px;
+  display: inline-block;
+  text-align: center;
+  margin: 15px 0 10px 0;
+  font-size: 16px;
+}
+
+.gy-hzhb .gy-title span:hover {
+  color: #ff9913;
+  cursor: pointer;
+}
+
+.gy-titlel {
+  border-left: 1px #e3e3e3 solid;
+  border-right: 1px #e3e3e3 solid;
+}
+
+.gy-text-1 {
+  border-bottom: 1px #e3e3e3 solid;
+  padding-bottom: 10px;
+  margin: 20px 0;
+  overflow: hidden;
+}
+
+.gy-text-2 {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  padding-bottom: 15px;
+}
+
+.gy-text-3 {
+  color: #666;
+  line-height: 26px;
+  display: -webkit-box;
+}
+
+.gy-img-1 {
+  float: left;
+  width: 170px;
+  text-align: left;
+  padding-top: 20px;
+  padding-right: 28px;
+}
+
+.gy-text-4 {
+  border-bottom: 1px #e3e3e3 solid;
+  padding-bottom: 10px;
+  margin: 20px 0;
+  overflow: hidden;
+}
+
+.gy-h4 {
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  line-height: 1.1;
+}
+
+.gy-h5 {
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  line-height: 1.1;
+  color: #333;
+}
+.gy-text-5 {
+  border-bottom: 1px #e3e3e3 solid;
+    padding-bottom: 10px;
+    margin: 20px 0;
+    overflow: hidden;
+}
+.gy-img-2 {
+  float: left;
+    width: 170px;
+    text-align: left;
+}
+.gy-img-2  img{
+  width:80%;
+}
+.gy-img-3 {
+  margin-top: 0;
+margin-right: 10px;
+max-width: 132px;
+height: auto;
+}
+.gy-lxwm {
+  background: #fff;
+    display: table;
+    padding: 25px;
+    font-size: 14px;
+}
+.gy-lxwm-ul {
+      margin-bottom: 35px;
+}
+.gy-lxwmtext  {
+  font-size: 20px;
+color: #333;
+padding-bottom: 15px;
+}
+.gy-lxwm-h5 {
+  line-height: 24px;
+color: #666;
 }
