--- a/views/lz_foot.ejs
+++ b/views/lz_foot.ejs
@@ -64,7 +64,7 @@
 
 
     <div class="clearfix lz-foot-foot">
-      <h4>
+      <h4 class="lz-foot-foot-h4">
         <ul class="clearfix">
           <li>我要理财</li>
           <li>我要借款</li>
