--- a/public/sass/lz_css.scss
+++ b/public/sass/lz_css.scss
@@ -78,12 +78,12 @@
       margin-top: 20px;
       height: 200px;
 
-      > h4 {
+      > h4.lz-foot-foot-h4 {
         margin: 0;
         padding: 0;
-        ul {
+        > ul {
           margin: 20px 0;
-          li {
+          > li {
             float: left;
             margin-right: 20px;
           }
@@ -261,13 +261,15 @@
     }
   }
 
-
+  .lz-connect-con {
+    min-height: 800px;
+  }
   .lz-con-con {
     padding: 20px 30px;
     margin: 30px 0;
     font-size: 14px;
     background-color: #fff;
-    > div {
+    > div > div {
       border-bottom: 1px solid #aaa;
     }
 
@@ -284,6 +286,7 @@
         float: left;
         padding: 5px;
       }
+      > dl dd.active,
       > dl dd:hover {
         color: red;
         cursor: pointer;
