--- a/views/lz_connect.ejs
+++ b/views/lz_connect.ejs
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="/l_font_ico/iconfont.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="/stylesheets/lz_css.css">
-  <script src="/js/jquery.min.js" charset="utf-8"></script>
+  <!-- <script src="/js/jquery.min.js" charset="utf-8"></script> -->
 </head>
 <%- include("lz_h_head") %>
 
@@ -23,29 +23,29 @@
       <div class="lz-con-head-b">
         <dl>
           <dt>产品期限:</dt>
-          <dd class="active">全部</dd>
-          <dd id="t1">1-3个月</dd>
-          <dd id="t2">4-9个月</dd>
-          <dd id="t3">10个月以上</dd>
+          <dd class="active" data-con="1" data-min="0" data-max="10000">全部</dd>
+          <dd id="t1" data-con="1" data-min="0" data-max="90">1-3个月</dd>
+          <dd id="t2" data-con="1" data-min="91" data-max="273">4-9个月</dd>
+          <dd id="t3" data-con="1" data-min="273" data-max="10000">10个月以上</dd>
         </dl>
         <dl>
             <dt>产品收益:</dt>
-            <dd class="active" date-num="100" >全部</dd>
-            <dd date-num="0-9" >9%以下</dd>
-            <dd date-num="9-10" >9-10%</dd>
-            <dd date-num="10-11" >10-11%</dd>
-            <dd date-num="11-12" >11-12%</dd>
-            <dd date-num="12+" >12%以上</dd>
+            <dd class="active" data-con="2" data-min="0" data-max="100">全部</dd>
+            <dd data-con="2" data-min="0" data-max="9">9%以下</dd>
+            <dd data-con="2" data-min="9" data-max="10">9-10%</dd>
+            <dd data-con="2" data-min="10" data-max="11">10-11%</dd>
+            <dd data-con="2" data-min="11" data-max="12">11-12%</dd>
+            <dd data-con="2" data-min="12" data-max="100">12%以上</dd>
         </dl>
         <dl>
             <dt>产品类型:</dt>
-            <dd class="active">全部</dd>
-            <dd>微投资<span class="hot" style="display: inline;"></span></dd>
-            <dd>月月盈</a></dd>
-            <dd>海航通宝</dd>
-            <dd>微金宝</dd>
-            <dd>微转让</dd>
-            <dd>稳赢保<span class="hot" style="display: inline;"></span></dd>
+            <dd class="active" data-con="3" data-name="">全部</dd>
+            <dd data-con="3" data-name="wei">微投资<span class="hot" style="display: inline;"></span></dd>
+            <dd data-con="3" data-name="yue">月月盈</a></dd>
+            <dd data-con="3" data-name="hai">海航通宝</dd>
+            <dd data-con="3" data-name="jin">微金宝</dd>
+            <dd data-con="3" data-name="zhu">微转让</dd>
+            <dd data-con="3" data-name="什么鬼">稳赢保<span class="hot" style="display: inline;"></span></dd>
         </dl>
         <a href="/"><img src="/images/aboutUs.jpg" alt=""></a>
       </div>
@@ -53,14 +53,14 @@
 
 
     <div class="lz-con-con">
-      <div class="lz-con-con-header">
+      <div class="lz-con-con-header lz-con-sort">
         <dl>
           <dt>排序方式:</dt>
-          <dd>默认排序</dd>
-          <dd>年化利率</dd>
-          <dd>投资期限</dd>
-          <dd>产品类型</dd>
-          <dd>产品星级</dd>
+          <dd class="active" data-sort="all">默认排序</dd>
+          <dd data-sort="income">年化利率<span>∧</span></dd>
+          <dd data-sort="year">投资期限<span>∧</span></dd>
+          <dd data-sort="type">产品类型<span>∧</span></dd>
+          <dd data-sort="star">产品星级<span>∧</span></dd>
         </dl>
       </div>
 
@@ -94,52 +94,83 @@
           </li>
         </ul>
       </div> -->
+      <div class="lz-connect-con">
 
-      <!-- Income 收益 -->
-      <% for (var data of list) {%>
-      <div class="lz-con-con-con">
-        <h1><%= data.title %></h1>
+        <!-- Income 收益 -->
+        <% for (var data of list) {%>
+          <div class="lz-con-con-con">
+            <h1><%= data.title %></h1>
 
-        <ul>
-          <li>
-            <span><%= data.incomeNum %></span>
-            <sub><%= data.income %></sub>
-            <p>测算年化收益率</p>
-          </li>
-          <li>
-            <p>借款期限：<span><%= data.year %>天</span></p>
-            <p>还款方式：<span><%= data.yearType %></span></p>
-          </li>
-          <li>
-            <p>筹集金额：<span><%= data.money %></span></p>
-            <p>产品星级：
-              <div>
-                <div style="width: <%= data.star %>%;"></div>
-              </div>
-            </p>
-          </li>
-          <li>
-            <p>投资进度：<span><%= data.program %>%</span><i><i  style="width: <%= data.program %>%;"></i></i></p>
-            <p>可投金额：<span><%= data.mayMoney %></span></p>
-          </li>
-          <li>
-            <div data-target= <%= data.src %>>立即加入</div>
-          </li>
-        </ul>
+            <ul>
+              <li>
+                <span><%= data.incomeNum %></span>
+                <sub><%= data.income %></sub>
+                <p>测算年化收益率</p>
+              </li>
+              <li>
+                <p>借款期限：<span><%= data.year %>天</span></p>
+                <p>还款方式：<span><%= data.yearType %></span></p>
+              </li>
+              <li>
+                <p>筹集金额：<span><%= data.money %></span></p>
+                <p>产品星级：
+                  <div>
+                    <div style="width: <%= data.star %>%;"></div>
+                  </div>
+                </p>
+              </li>
+              <li>
+                <p>投资进度：<span><%= data.program %>%</span><i><i  style="width: <%= data.program %>%;"></i></i></p>
+                <p>可投金额：<span><%= data.mayMoney %></span></p>
+              </li>
+              <li>
+                <div data-target= <%= data.src %>>立即加入</div>
+              </li>
+            </ul>
+          </div>
+          <% } %>
       </div>
-      <% } %>
 
 
+      <div id="page" style="margin-top: 15px;">
+        <div class="next fr">»</div>
+        <div class="last fr">末页</div>
+        <ul class="pagingUl">
+          <li><a href="javascript:" class="activP">1</a></li>
+          <li><a href="javascript:" class="">2</a></li>
+          <li><a href="javascript:" class="">3</a></li>
+          <li><a href="javascript:" class="">4</a></li>
+          <li><a href="javascript:" class="">5</a></li>
+          <li><a href="javascript:" class="">6</a></li>
+          <li><a href="javascript:" class="">7</a></li>
+        </ul>
+        <div class="first fr">首页</div>
+        <div class="prv fr">«</div>
+      </div>
     </div>
 
   </div>
 </div>
 
-<%- include("lz_foot") %>
 
-
+<script src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.page.js"></script>
 <script type="text/javascript">
-  $(".lz-con-head-b > dl").children("dd").click(function() {
-    $(this).attr("class", "active").siblings().removeAttr("class");
-  });
+      var pageLength = <%= pageLength %>;
+      console.log(pageLength);
+      $(function(){
+        $("#page").Page({
+          totalPages: 3,//分页总数
+          liNums: 3,//分页的数字按钮数(建议取奇数)
+          activeClass: 'activP', //active 类样式定义
+          callBack : function(page){
+            var b = (page - 1) * 3;
+            sortAjax(1, b);
+          }
+        });
+      })
+
 </script>
+
+<%- include("lz_foot") %>
+<script src="js/lz_click.js" charset="utf-8"></script>
