--- a/views/h_xs-01.ejs
+++ b/views/h_xs-01.ejs
@@ -69,8 +69,8 @@
     <%- include("lz_foot") %>
     <script src="/js/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript">
-    var ul = $("ul li");
-    ul.click(function(){
+    var li = $("ul li");
+    li.click(function(){
       location.href = $(this).find('a')[0].href;
     });
 
